# dbxignore

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  BACKLOG.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.md  cchk.toml  install.ps1  install.sh  pyproject.toml
.github/: dependabot.yml
.github/workflows/: claude-code-review.yml  claude.yml  codex-followup.yml  commit-check.yml  release.yml  test.yml
docs/: post-v0.2-followups.md  v0.2-simplification-followups.md
docs/internals/: active-gotchas.md  architecture.md  gotchas.md  historical-gotchas.md  long-form-gotchas.md
docs/release-notes/: v0.2.0.md  v0.2.1.md  v0.3.0.md  v0.4.0.md  v0.5.0.md  v0.5.1.md
docs/superpowers/plans/: 2026-04-21-dropboxignore-v0.2-linux-followups.md  2026-04-27-v0.4-macos-implementation.md  (+13 more)
installer/: build.ps1  dbxignore.iss
pyinstaller/: _pe_metadata.py  dbxignore-linux.spec  dbxignore-macos.spec  dbxignore.spec  dbxignorew.spec
scripts/: _phase_extended_cli.sh  manual-test-macos.sh  manual-test-ubuntu-vps.sh  manual-test-windows.ps1
src/dbxignore/: __init__.py  __main__.py  _logging.py  _testing.py  _windows_console.py  _windows_dialogs.py  cli.py  daemon.py  debounce.py  markers.py  reconcile.py  roots.py  rules.py  rules_conflicts.py  state.py
src/dropboxignore/: __main__.py  ads.py  cli.py  daemon.py  debounce.py  install.py  reconcile.py  roots.py  rules.py  state.py
tests/: conftest.py  test_ads_unit.py  test_cli_apply.py  test_cli_clear.py  test_cli_enotsup.py  test_cli_entrypoints.py  test_cli_generate.py  test_cli_ignore.py  test_cli_init.py  test_cli_status_list_explain.py  test_cli_symlink_path_args.py  test_daemon_capture_create_time.py  test_daemon_dispatch.py  test_daemon_initial_sweep.py  test_daemon_inotify_enospc.py  test_daemon_logging.py  test_daemon_singleton.py  test_daemon_slow_sweep.py  test_daemon_smoke.py  test_daemon_smoke_linux.py  test_daemon_sweep.py  test_daemon_synthetic_events.py  test_debounce.py  test_install.py  test_install_common.py  test_install_windows_shell.py  test_linux_reconcile_smoke.py  test_linux_systemd.py  test_linux_xattr_integration.py  test_macos_launchd.py  test_macos_reconcile_smoke.py  test_macos_xattr_integration.py  test_macos_xattr_unit.py  test_markers_facade.py  test_reconcile_basic.py  test_reconcile_edges.py  test_reconcile_enotsup.py  test_reconcile_return_state.py  test_roots.py  test_rules_append_remove.py  (+16 more)
tests/fixtures/: info_personal.json  info_personal_business.json
(+26 files in other folders)
